css/main.css
/**
 * Common
 *
 */
* {
  margin: 0;
  padding: 0;
}
html, body { height: 100%; }
body {
  background-color: #FFF;
  font: 16px Helvetica, Arial, sans-serif;
}
h1, h2, h3, h4, h5, h6{ font-size: 100%; }
p{ margin: 1em 0; }
a{ color: #00a; }
a:hover{ color: #000; }
a:visited{ color: #a0a; }

/**
 * Home
 *
 */
.posts {
  font-size:1.25em;
  list-style-type: none;
  margin-bottom: 2em;
}
.posts li {
  line-height: 1.75em;
}
.posts span {
  color: #aaa;
  display:block;
}

/**
 * Site
 *
 */
.site {
  text-align: left;
  width: 97.5%;
  min-width:300px;
  margin: 0 auto;
  line-height: 1.5;
}
.page-title{
  font-size:2em;
  line-height:1;
}
.meta{
  text-align:right;
}
.site .footer {
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}
.footer nav ul {
  list-style: none;
  margin:1em 0;
}
.footer nav li {
  margin-right:2em;
}
.site .footer .contact a {
  color: #8085C1;
}
.contact p {
  margin-right: 1em;
}

/**
 * Posts
 *
 */
.post{
  margin:0 auto;
  width:75%;
}
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
  overflow-x: scroll;
}
.post ul, .post ol {
  margin-left: 1.35em;
}
.post ol ul{
  margin:0;
  padding:0;
  list-style:none;
}
.post code {
  background-color: #eef;
}
.post p code {
  padding: 0 .2em;
  border: 1px solid #ddd;
}
code .lineno {
 opacity: 0.5;
}
/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

.sketch {
  border: 1px solid #333;
}

@media screen and (min-width:600px){
  .site{
    width:80%;
  }
  .posts span{
    float:left;
    width:25%;
  }
  .post{
    margin: 0 0 0 25%;
    width:75%;
  }
  .site .footer .contact {
    float: left;
    width: 25%;
  }
  .footer nav li {
    display:inline;
  }
}

